fix readability with css styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,8 @@ label {
 #result {
   display: none;
   margin-top: 50px;
+  margin-bottom: 100px;
   font-family: 'VT323', monospace;
   font-size: 30px;
+  color: #41e0e2;
 }
